--- a/DA/model/04_GradientBoostingRegressor.ipynb
+++ b/DA/model/04_GradientBoostingRegressor.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -239,71 +239,60 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_6732\\2754236236.py:45: DtypeWarning: Columns (1,3,6,7,8,9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv('D:/장우영/LOCALSEARCH/Ship_DA/DA/data/FAmerge_20230607_1147142.csv', encoding='ANSI')\n",
-      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_6732\\2754236236.py:66: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X['minute'] = pd.to_datetime(data['insert_time']).dt.minute + 1\n"
+      "  data = pd.read_csv('D:/장우영/LOCALSEARCH/Ship_DA/DA/data/FAmerge_20230607_1147142.csv', encoding='ANSI')\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               mmsi  ship_type   latitude   longitude    cog   sog  year   \n",
-      "0       440051540.0        0.0  35.039909  129.062547  329.2   5.7  2023  \\\n",
-      "5       538010219.0        0.0  34.882612  129.060553  212.2  16.1  2023   \n",
-      "17      440051540.0        0.0  35.039909  129.062547  329.2   5.7  2023   \n",
-      "19      440102990.0        0.0  35.099860  129.041436   42.6   8.8  2023   \n",
-      "20      440048210.0       80.0  35.064618  129.110167   31.6   9.6  2023   \n",
-      "...             ...        ...        ...         ...    ...   ...   ...   \n",
-      "329822  613744000.0       70.0  35.036195  129.038113    3.0   5.5  2023   \n",
-      "329826  431602232.0       60.0  35.012839  129.243647  307.0  15.9  2023   \n",
-      "329833  440700770.0       30.0  34.121082  128.358546  258.0   7.1  2023   \n",
-      "329835  440047230.0       89.0  34.946146  129.160302  225.0   8.1  2023   \n",
-      "329836  440107000.0       80.0  35.047874  129.143773  137.4  11.8  2023   \n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_6732\\2754236236.py\", line 53, in <module>\n",
+      "    data[['latitude', 'longitude']] = data['geom'].apply(convert_wkb_to_coordinates).apply(pd.Series)\n",
+      "  File \"c:\\Users\\SW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\series.py\", line 4626, in apply\n",
+      "    return SeriesApply(self, func, convert_dtype, args, kwargs).apply()\n",
+      "  File \"c:\\Users\\SW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\apply.py\", line 1025, in apply\n",
+      "    return self.apply_standard()\n",
+      "  File \"c:\\Users\\SW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\apply.py\", line 1076, in apply_standard\n",
+      "    mapped = lib.map_infer(\n",
+      "  File \"pandas\\_libs\\lib.pyx\", line 2834, in pandas._libs.lib.map_infer\n",
+      "  File \"C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_6732\\2754236236.py\", line 35, in convert_wkb_to_coordinates\n",
+      "    transformed = Transformer.transform(transformer,geometry.x, geometry.y)\n",
+      "  File \"c:\\Users\\SW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyproj\\transformer.py\", line 812, in transform\n",
+      "    return self._transformer._transform_point(\n",
+      "KeyboardInterrupt\n",
       "\n",
-      "        month  day  hour  minute  second     풍향     유향    기온    수온    풍속   유속   \n",
-      "0           5   11    10      11      10  196.0  246.0  16.4  17.0  9.77  0.3  \\\n",
-      "5           5   11    10      11      10  196.0  246.0  16.4  17.0  9.77  0.3   \n",
-      "17          5   11    10      11      10  196.0  246.0  16.4  17.0  9.77  0.3   \n",
-      "19          5   11    10      11      10  196.0  246.0  16.4  17.0  9.77  0.3   \n",
-      "20          5   11    10      11      10  196.0  246.0  16.4  17.0  9.77  0.3   \n",
-      "...       ...  ...   ...     ...     ...    ...    ...   ...   ...   ...  ...   \n",
-      "329822      5   11    17      24      23  207.0  201.0  16.2  16.5  7.71  0.2   \n",
-      "329826      5   11    17      24      23  207.0  201.0  16.2  16.5  7.71  0.2   \n",
-      "329833      5   11    17      24      23  207.0  201.0  16.2  16.5  7.71  0.2   \n",
-      "329835      5   11    17      24      23  207.0  201.0  16.2  16.5  7.71  0.2   \n",
-      "329836      5   11    17      24      23  207.0  201.0  16.2  16.5  7.71  0.2   \n",
+      "During handling of the above exception, another exception occurred:\n",
       "\n",
-      "            기압    습도  \n",
-      "0       1017.0  82.0  \n",
-      "5       1017.0  82.0  \n",
-      "17      1017.0  82.0  \n",
-      "19      1017.0  82.0  \n",
-      "20      1017.0  82.0  \n",
-      "...        ...   ...  \n",
-      "329822  1015.0  60.0  \n",
-      "329826  1015.0  60.0  \n",
-      "329833  1015.0  60.0  \n",
-      "329835  1015.0  60.0  \n",
-      "329836  1015.0  60.0  \n",
-      "\n",
-      "[117741 rows x 20 columns]\n",
-      "Predicted Latitude: [35.09618581 34.750355   35.10454445 ... 34.84844085 34.93544462\n",
-      " 35.03964855]\n",
-      "Predicted Longitude: [129.08301845 129.08743304 129.06885034 ... 128.97329368 129.1391593\n",
-      " 129.06080425]\n",
-      "Predicted COG: [304.20986172  27.74139444 121.05839102 ...  34.26228677  18.15436191\n",
-      " 286.69351499]\n",
-      "Predicted SOG: [ 6.90077103 13.09639779  9.41527584 ... 10.18508917 11.6355589\n",
-      "  9.92284309]\n",
-      "MSE Latitude: 6.085525537093578e-06\n",
-      "MSE Longitude: 1.2469806471469935e-05\n",
-      "MSE COG: 0.45591662832163893\n",
-      "MSE SOG: 0.03886102256871948\n"
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py\", line 2102, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1310, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1199, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1052, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 953, in format_exception_as_a_whole\n",
+      "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1005, in get_records\n",
+      "    style = stack_data.style_with_executing_node(style, self._tb_highlight)\n",
+      "  File \"C:\\Users\\SW\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 455, in style_with_executing_node\n",
+      "    class NewStyle(style):\n",
+      "  File \"c:\\Users\\SW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pygments\\style.py\", line 91, in __new__\n",
+      "    ndef[4] = colorformat(styledef[3:])\n",
+      "  File \"c:\\Users\\SW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pygments\\style.py\", line 58, in colorformat\n",
+      "    assert False, \"wrong color format %r\" % text\n",
+      "AssertionError: wrong color format 'ansiyellow'\n"
      ]
     }
    ],
@@ -429,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
