--- a/DA/notebooks/DA_report.ipynb
+++ b/DA/notebooks/DA_report.ipynb
@@ -2294,6 +2294,51 @@
     "\n",
     "분석 결과, 위도와 경도의 예측 값의 MSE가 매우 작아 정확한 예측이 이루어졌지만, COG와 SOG의 예측 값의 MSE가 상대적으로 크므로 해당 변수들을 예측하는 데는 아직 개선의 여지가 있을 수 있습니다. 추가적인 데이터 처리나 모델 튜닝 등을 통해 모델의 성능을 더욱 개선할 수 있을 것입니다."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1번째 실험 \n",
+    "\n",
+    "실제 좌표값 \t\t35.041211253054\t\t129.06154975753\n",
+    "\n",
+    "1분 후 예상 경로\n",
+    "\n",
+    "LSTM 모델 예상경로      35.00485992431\t\t129.136947631\n",
+    "\n",
+    "LSTM+CNN\t\t35.068016052246\t\t129.0074157714\n",
+    "\n",
+    "GradientBoosting\t35.0396485462566\t129.0608042460\n",
+    "\n",
+    "실제 1분 후 값 \t\t35.041211253054\t\t129.0615497539\n",
+    "\n",
+    "\n",
+    "GradientBoosting값이 가장 정확\n",
+    "\n",
+    "\n",
+    "2번째 실험 \n",
+    "\n",
+    "440147110\tDAE YANG 201 HO\t52\t35.088268795024355 129.1536719899256210.5\t\n",
+    "6.4\t2023-05-11 10:13:24\t196\t246\t16.4\t17\t9.77\t0.3\t1017\t82\n",
+    "\n",
+    "\n",
+    "실제 좌표값 \t\t35.088268795024355 \t129.1536719899256210\n",
+    "\n",
+    "1분 후 예상 경로\n",
+    "\n",
+    "LSTM 모델 예상경로      35.08183288574219\t129.20936584472656\n",
+    "\n",
+    "LSTM+CNN\t\t35.061283111572266\t129.16880798339844\n",
+    "\n",
+    "GradientBoosting\t35.08830223498515\t129.1570562280799\n",
+    "\n",
+    "실제 1분 후 값 \t\t35.08677660522958 \t129.1527107925716\n",
+    "\t\n",
+    "GradientBoosting값이 가장 정확\n",
+    " "
+   ]
   }
  ],
  "metadata": {
