--- a/DA/notebooks/practice.ipynb
+++ b/DA/notebooks/practice.ipynb
@@ -2440,6 +2440,37 @@
     "# Usage example\n",
     "calculate_total_loss_cases()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'#START7777\\n#--------------------------------------------------------------------------------------------------\\r\\n#  \\xb1\\xe2\\xbb\\xf3\\xc3\\xbb BUOY \\xb0\\xfc\\xc3\\xf8\\xc0\\xda\\xb7\\xe1 [\\xc0\\xd4\\xb7\\xc2\\xc0\\xce\\xbc\\xf6\\xc7\\xfc\\xc5\\xc2][\\xbf\\xb9] ?tm=201001051200&stn=22101&help=1\\r\\n#                      \\xbf\\xe4\\xc3\\xbb\\xc7\\xd1 \\xbd\\xc3\\xb0\\xa3\\xbf\\xa1\\xbc\\xad -59\\xba\\xd0 ~ 00\\xba\\xd0 \\xbb\\xe7\\xc0\\xcc\\xc0\\xc7 \\xc0\\xda\\xb7\\xe1\\xb8\\xa6 \\xb8\\xf0\\xb5\\xce \\xc7\\xa5\\xc3\\xe2\\r\\n#                      stn=0 \\xc0\\xcc\\xb0\\xc5\\xb3\\xaa \\xbe\\xf8\\xc0\\xb8\\xb8\\xe9, \\xc0\\xfc\\xc3\\xbc \\xc1\\xf6\\xc1\\xa1 \\xc7\\xa5\\xc3\\xe2\\r\\n#--------------------------------------------------------------------------------------------------\\r\\n#  1. TM      : \\xb0\\xfc\\xc3\\xf8\\xbd\\xc3\\xb0\\xa3 (KST)\\r\\n#  2. STN     : BUOY \\xc1\\xf6\\xc1\\xa1 ID\\r\\n#  3. WD1     : \\xbc\\xbe\\xbc\\xad1\\xc0\\xc7 \\xc7\\xb3\\xc7\\xe2 (degree)\\r\\n#  4. WS1     : \\xbc\\xbe\\xbc\\xad1\\xc0\\xc7 \\xc7\\xb3\\xbc\\xd3 (m/s)\\r\\n#  5. WS1_GST : \\xbc\\xbe\\xbc\\xad1\\xc0\\xc7 GUST \\xc7\\xb3\\xbc\\xd3 (m/s)\\r\\n#  6. WD2     : \\xbc\\xbe\\xbc\\xad2\\xc0\\xc7 \\xc7\\xb3\\xc7\\xe2 (degree)\\r\\n#  7. WS2     : \\xbc\\xbe\\xbc\\xad2\\xc0\\xc7 \\xc7\\xb3\\xbc\\xd3 (m/s)\\r\\n#  8. WS2_GST : \\xbc\\xbe\\xbc\\xad2\\xc0\\xc7 GUST \\xc7\\xb3\\xbc\\xd3 (m/s)\\r\\n#  9. PA      : \\xc7\\xd8\\xb8\\xe9\\xb1\\xe2\\xbe\\xd0 (hPa)\\r\\n# 10. HM      : \\xbb\\xf3\\xb4\\xeb\\xbd\\xc0\\xb5\\xb5 (%)\\r\\n# 11. TA      : \\xb1\\xe2\\xbf\\xc2 (C)\\r\\n# 12. TW      : \\xc7\\xd8\\xbc\\xf6\\xb8\\xe9 \\xbf\\xc2\\xb5\\xb5 (C)\\r\\n# 13. WH_MAX  : \\xc3\\xd6\\xb4\\xeb\\xc6\\xc4\\xb0\\xed (m)\\r\\n# 14. WH_SIG  : \\xc0\\xaf\\xc0\\xc7\\xc6\\xc4\\xb0\\xed (m) \\r\\n# 15. WH_AVE  : \\xc6\\xf2\\xb1\\xd5\\xc6\\xc4\\xb0\\xed (m) \\r\\n# 16. WP      : \\xc6\\xc4\\xc1\\xd6\\xb1\\xe2 (sec) \\r\\n# 17. WO      : \\xc6\\xc4\\xc7\\xe2 (degree) \\r\\n#--------------------------------------------------------------------------------------------------\\r\\n#234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123\\n# YYMMDDHHMI   STN WD1   WS1   WS1 WD2   WS2   WS2     PA    HM    TA    TW    WH    WH    WH    WP  WO\\n#        KST    ID deg   m/s   GST deg   m/s   GST    hPa     %     C     C   MAX   SIG   AVE   sec deg\\n202306161530 21229 192   4.9   6.0 192   4.5   5.5 1011.5  81.0  23.0  22.9   0.5   0.3   0.2   2.9 218\\n202306161600 21229 183   4.9   5.8 184   4.5   5.4 1011.3  81.0  23.1  22.9   0.5   0.4   0.2   2.9 218\\n#7777END\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from urllib.request import urlopen\n",
+    "\n",
+    "# https://apihub.kma.go.kr/api/typ01/url/kma_buoy.php?tm=202306161610&stn=21229&help=1&authKey=cJGQY1PQTnuRkGNT0H57zQ\n",
+    "domain = \"https://apihub.kma.go.kr/api/typ01/url/kma_buoy.php?\"\n",
+    "tm  = \"tm=202306161610&\"\n",
+    "stn_id =\"stn=21229&\"\n",
+    "option = \"help=1&authKey=cJGQY1PQTnuRkGNT0H57zQ\"\n",
+    "auth = \"\"\n",
+    "\n",
+    "url = domain +tm +stn_id +option + auth\n",
+    "\n",
+    "with urlopen(url) as f:\n",
+    "    \n",
+    "    html = f.read()\n",
+    "    print(html)"
+   ]
   }
  ],
  "metadata": {
