--- a/DA/model/04_GradientBoostingRegressor.ipynb
+++ b/DA/model/04_GradientBoostingRegressor.ipynb
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_6732\\205419831.py:45: DtypeWarning: Columns (1,3,6,7,8,9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_6732\\1681096424.py:45: DtypeWarning: Columns (1,3,6,7,8,9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv('D:/장우영/LOCALSEARCH/Ship_DA/DA/data/FAmerge_20230607_1147142.csv', encoding='ANSI')\n"
      ]
     },
@@ -103,14 +103,15 @@
       " 286.69351499]\n",
       "Predicted SOG: [ 6.90077103 13.09639779  9.41527584 ... 10.18508917 11.6355589\n",
       "  9.92284309]\n",
-      "MSE Latitude: 6.086448608069595e-06\n",
-      "MSE Longitude: 1.2468009209934095e-05\n",
-      "MSE COG: 0.4559166283216426\n",
-      "MSE SOG: 0.03883484041047028\n"
+      "MSE Latitude: 6.08673862968472e-06\n",
+      "MSE Longitude: 1.2456185865366818e-05\n",
+      "MSE COG: 0.45591662832164215\n",
+      "MSE SOG: 0.038765574488481086\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
@@ -174,6 +175,7 @@
     "data['second'] = pd.to_datetime(data['insert_time']).dt.minute\n",
     "\n",
     "# 특성 선택\n",
+    "# X = data[[\"mmsi\", \"ship_type\", \"latitude\",\"longitude\", \"cog\", \"sog\", \"year\", \"month\", \"day\", \"hour\", \"minute\", \"second\", \"풍향\", \"유향\", \"기온\", \"수온\", \"풍속\", \"유속\", \"기압\", \"습도\"]]\n",
     "\n",
     "X = data[[\"mmsi\", \"ship_type\", \"latitude\",\"longitude\", \"cog\", \"sog\", \"year\", \"month\", \"day\", \"hour\", \"minute\", \"second\", \"풍향\", \"유향\", \"기온\", \"수온\", \"풍속\", \"유속\", \"기압\", \"습도\"]]\n",
     "\n",
@@ -292,13 +294,13 @@
     "axes[3].set_title('Actual vs Predicted SOG')\n",
     "axes[3].legend()\n",
     "\n",
-    "plt.tight_layout()\n",
+    "plt.tight_layout()  \n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,41 +354,6 @@
     "평균 제곱 오차(MSE)는 예측의 정확도를 평가하기 위해 계산됩니다.\n",
     "예측된 위도, 경도, COG, SOG 값, 예측 시간 및 MSE 값이 인쇄됩니다.\n",
     "예, 코드는 데이터 세트의 'insert_time'을 기반으로 1분 후에 위도, 경도, 방향 및 속도 값을 예측하는 예측 모델을 생성합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "# 모델 저장\n",
-    "with open('model_latitude.pkl', 'wb') as f:\n",
-    "    pickle.dump(model_latitude, f)\n",
-    "\n",
-    "with open('model_longitude.pkl', 'wb') as f:\n",
-    "    pickle.dump(model_longitude, f)\n",
-    "    \n",
-    "with open('model_cog.pkl', 'wb') as f:\n",
-    "    pickle.dump(model_cog, f)\n",
-    "\n",
-    "with open('model_sog.pkl', 'wb') as f:\n",
-    "    pickle.dump(model_sog, f)\n",
-    "\n",
-    "# 모델 불러오기\n",
-    "with open('model_latitude.pkl', 'rb') as f:\n",
-    "    model_latitude = pickle.load(f)\n",
-    "\n",
-    "with open('model_longitude.pkl', 'rb') as f:\n",
-    "    model_longitude = pickle.load(f)\n",
-    "    \n",
-    "with open('model_cog.pkl', 'rb') as f:\n",
-    "    model_cog = pickle.load(f)\n",
-    "\n",
-    "with open('model_sog.pkl', 'rb') as f:\n",
-    "    model_sog = pickle.load(f)   "
    ]
   },
   {
