--- a/DA/model/02_LSTMmodel.ipynb
+++ b/DA/model/02_LSTMmodel.ipynb
@@ -479,6 +479,326 @@
     "# Load the scaler object\n",
     "loaded_scaler = pickle.load(open('scaler.pkl', 'rb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             mmsi  ship_type   latitude   longitude    cog   sog  year  month   \n",
+      "0       440051540          0  35.039909  129.062547  329.2   5.7  2023      5  \\\n",
+      "5       538010219          0  34.882612  129.060553  212.2  16.1  2023      5   \n",
+      "17      440051540          0  35.039909  129.062547  329.2   5.7  2023      5   \n",
+      "19      440102990          0  35.099860  129.041436   42.6   8.8  2023      5   \n",
+      "20      440048210         80  35.064618  129.110167   31.6   9.6  2023      5   \n",
+      "...           ...        ...        ...         ...    ...   ...   ...    ...   \n",
+      "327333  671388100         89  35.028633  129.047195  143.4   5.7  2023      5   \n",
+      "327336  431005484         80  33.832940  130.407585   40.1  13.4  2023      5   \n",
+      "327338  636016262         70  34.057415  130.476468  266.4  13.1  2023      5   \n",
+      "327339  373488000         70  35.091260  129.088203  124.9   7.6  2023      5   \n",
+      "327343  440128440         35  35.080300  129.086424  311.5   4.5  2023      5   \n",
+      "\n",
+      "        day  hour  minute  second          풍향          유향         기온   \n",
+      "0        11    10      10      10  197.256667  242.906667  16.380667  \\\n",
+      "5        11    10      10      10  197.256667  242.906667  16.380667   \n",
+      "17       11    10      10      10  197.278333  242.853333  16.380333   \n",
+      "19       11    10      10      10  197.278333  242.853333  16.380333   \n",
+      "20       11    10      10      10  197.278333  242.853333  16.380333   \n",
+      "...     ...   ...     ...     ...         ...         ...        ...   \n",
+      "327333   11    17      19      19  206.976667  201.016667  16.201667   \n",
+      "327336   11    17      20      20  207.000000  201.000000  16.200000   \n",
+      "327338   11    17      20      20  207.000000  201.000000  16.200000   \n",
+      "327339   11    17      20      20  207.000000  201.000000  16.200000   \n",
+      "327343   11    17      20      20  207.000000  201.000000  16.200000   \n",
+      "\n",
+      "               수온       풍속        유속      기압         습도  \n",
+      "0       16.971000  9.91790  0.290333  1017.0  82.000000  \n",
+      "5       16.971000  9.91790  0.290333  1017.0  82.000000  \n",
+      "17      16.970500  9.92045  0.290167  1017.0  82.000000  \n",
+      "19      16.970500  9.92045  0.290167  1017.0  82.000000  \n",
+      "20      16.970500  9.92045  0.290167  1017.0  82.000000  \n",
+      "...           ...      ...       ...     ...        ...  \n",
+      "327333  16.499833  7.70915  0.200000  1015.0  60.001667  \n",
+      "327336  16.500000  7.71000  0.200000  1015.0  60.000000  \n",
+      "327338  16.500000  7.71000  0.200000  1015.0  60.000000  \n",
+      "327339  16.500000  7.71000  0.200000  1015.0  60.000000  \n",
+      "327343  16.500000  7.71000  0.200000  1015.0  60.000000  \n",
+      "\n",
+      "[116883 rows x 20 columns]\n",
+      "Epoch 1/100\n",
+      "2923/2923 [==============================] - 5s 1ms/step - loss: 6371.7446 - val_loss: 3061.9810\n",
+      "Epoch 2/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 2422.7896 - val_loss: 1228.3008\n",
+      "Epoch 3/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 492.9484 - val_loss: 126.9181\n",
+      "Epoch 4/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 52.9707 - val_loss: 17.3325\n",
+      "Epoch 5/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 10.0370 - val_loss: 5.6937\n",
+      "Epoch 6/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 3.7051 - val_loss: 2.2899\n",
+      "Epoch 7/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 1.5544 - val_loss: 1.0767\n",
+      "Epoch 8/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.8013 - val_loss: 0.6250\n",
+      "Epoch 9/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.4904 - val_loss: 0.3923\n",
+      "Epoch 10/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.3195 - val_loss: 0.2553\n",
+      "Epoch 11/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.2177 - val_loss: 0.1761\n",
+      "Epoch 12/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.1527 - val_loss: 0.1307\n",
+      "Epoch 13/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.1139 - val_loss: 0.0961\n",
+      "Epoch 14/100\n",
+      "2923/2923 [==============================] - 4s 2ms/step - loss: 0.0875 - val_loss: 0.0734\n",
+      "Epoch 15/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0687 - val_loss: 0.0683\n",
+      "Epoch 16/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0551 - val_loss: 0.0543\n",
+      "Epoch 17/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0456 - val_loss: 0.0471\n",
+      "Epoch 18/100\n",
+      "2923/2923 [==============================] - 5s 2ms/step - loss: 0.0379 - val_loss: 0.0357\n",
+      "Epoch 19/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0322 - val_loss: 0.0406\n",
+      "Epoch 20/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0267 - val_loss: 0.0258\n",
+      "Epoch 21/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0224 - val_loss: 0.0252\n",
+      "Epoch 22/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0191 - val_loss: 0.0179\n",
+      "Epoch 23/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0164 - val_loss: 0.0200\n",
+      "Epoch 24/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0144 - val_loss: 0.0252\n",
+      "Epoch 25/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0126 - val_loss: 0.0189\n",
+      "Epoch 26/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0113 - val_loss: 0.0164\n",
+      "Epoch 27/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0100 - val_loss: 0.0165\n",
+      "Epoch 28/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0095 - val_loss: 0.0194\n",
+      "Epoch 29/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0088 - val_loss: 0.0163\n",
+      "Epoch 30/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0080 - val_loss: 0.0129\n",
+      "Epoch 31/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0076 - val_loss: 0.0108\n",
+      "Epoch 32/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0073 - val_loss: 0.0165\n",
+      "Epoch 33/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0069 - val_loss: 0.0101\n",
+      "Epoch 34/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0063 - val_loss: 0.0217\n",
+      "Epoch 35/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0063 - val_loss: 0.0082\n",
+      "Epoch 36/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0058 - val_loss: 0.0238\n",
+      "Epoch 37/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0060 - val_loss: 0.0079\n",
+      "Epoch 38/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0056 - val_loss: 0.0093\n",
+      "Epoch 39/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0055 - val_loss: 0.0097\n",
+      "Epoch 40/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0051 - val_loss: 0.0113\n",
+      "Epoch 41/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0050 - val_loss: 0.0081\n",
+      "Epoch 42/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0049 - val_loss: 0.0164\n",
+      "Epoch 43/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0047 - val_loss: 0.0096\n",
+      "Epoch 44/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0045 - val_loss: 0.0072\n",
+      "Epoch 45/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0042 - val_loss: 0.0088\n",
+      "Epoch 46/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0046 - val_loss: 0.0072\n",
+      "Epoch 47/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0042 - val_loss: 0.0126\n",
+      "Epoch 48/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0041 - val_loss: 0.0072\n",
+      "Epoch 49/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0040 - val_loss: 0.0102\n",
+      "Epoch 50/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0040 - val_loss: 0.0082\n",
+      "Epoch 51/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0038 - val_loss: 0.0380\n",
+      "Epoch 52/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0039 - val_loss: 0.0189\n",
+      "Epoch 53/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0037 - val_loss: 0.0142\n",
+      "Epoch 54/100\n",
+      "2923/2923 [==============================] - 4s 1ms/step - loss: 0.0035 - val_loss: 0.0094\n",
+      "731/731 [==============================] - 1s 709us/step\n",
+      "Mean Squared Error: 0.007196571666135288\n",
+      "R-squared: 0.9934711316361451\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LSTM 모델 만들기!  아직 수정 중!!!  ### 06.23 수정 중 \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from pyproj import Transformer\n",
+    "\n",
+    "import binascii\n",
+    "from shapely import wkb\n",
+    "import pyproj\n",
+    "\n",
+    "def convert_wkb_to_coordinates(wkb_string):\n",
+    "    \n",
+    "    # 0단계 :Check if the value is a float\n",
+    "    if isinstance(wkb_string, float):\n",
+    "        return None, None\n",
+    "    \n",
+    "    # 1단계: 16진수 문자열을 이진 형식으로 디코딩\n",
+    "    binary_string = binascii.unhexlify(wkb_string)\n",
+    "\n",
+    "    # 2단계: 이진 형식 파싱 \n",
+    "    geometry = wkb.loads(binary_string)\n",
+    "\n",
+    "    # 3단계: 좌표를 위도와 경도로 변환\n",
+    "    if geometry and hasattr(geometry, 'wkt'):\n",
+    "        # Well-Known Text (WKT) 형식으로 변환\n",
+    "        wkt = geometry.wkt\n",
+    "\n",
+    "        # 좌표 시스템 변환 정의\n",
+    "        #!crs_from = pyproj.Proj(init='epsg:3857')\n",
+    "        #!crs_to = pyproj.Proj(init='epsg:4326')\n",
+    "        transformer = Transformer.from_crs(\"EPSG:3857\", \"EPSG:4326\")\n",
+    "        transformer.transform(12, 12)\n",
+    "\n",
+    "        # 좌표 변환 수행\n",
+    "        #! transformed = pyproj.transform(crs_from, crs_to, geometry.x, geometry.y)\n",
+    "        transformed = Transformer.transform(transformer,geometry.x, geometry.y)\n",
+    "\n",
+    "        # 위도와 경도 추출\n",
+    "        latitude, longitude = transformed[0], transformed[1]\n",
+    "        \n",
+    "        return latitude, longitude\n",
+    "    else:\n",
+    "        return None, None\n",
+    "    \n",
+    "# CSV 파일에서 데이터 로드  \n",
+    "data = pd.read_csv('D:/장우영/LOCALSEARCH/Ship_DA/DA/data/06_25.csv', encoding='ANSI')\n",
+    "\n",
+    "# 특정 칼럼의 조건에 따라 데이터 필터링\n",
+    "filtered_data = data[data['sog'] > 3]  # 특정 칼럼과 조건을 적절히 수정해야 합니다\n",
+    "\n",
+    "data= filtered_data\n",
+    "\n",
+    "# 좌표 변환 적용 및 데이터프레임 업데이트\n",
+    "data[['latitude', 'longitude']] = data['geom'].apply(convert_wkb_to_coordinates).apply(pd.Series)\n",
+    "\n",
+    "#print(data[['latitude', 'longitude']])\n",
+    "\n",
+    "# \"insert_time\"을 숫자로 변환\n",
+    "data['year'] = pd.to_datetime(data['insert_time']).dt.year\n",
+    "data['month'] = pd.to_datetime(data['insert_time']).dt.month\n",
+    "data['day'] = pd.to_datetime(data['insert_time']).dt.day\n",
+    "data['hour'] = pd.to_datetime(data['insert_time']).dt.hour\n",
+    "data['minute'] = pd.to_datetime(data['insert_time']).dt.minute\n",
+    "data['second'] = pd.to_datetime(data['insert_time']).dt.minute\n",
+    "\n",
+    "\n",
+    "# 특성과 타겟 변수 선택\n",
+    "X = data[[\"mmsi\", \"ship_type\", \"latitude\", \"longitude\", \"cog\", \"sog\", \"year\", \"month\", \"day\", \"hour\", \"minute\", \"second\", \"풍향\", \"유향\", \"기온\", \"수온\", \"풍속\", \"유속\", \"기압\", \"습도\"]]\n",
+    "X['minute'] = pd.to_datetime(data['insert_time']).dt.minute + 1\n",
+    "y = data[[\"latitude\", \"longitude\",\"cog\", \"sog\"]]\n",
+    "\n",
+    "print(X)\n",
+    "\n",
+    "# 데이터를 훈련 세트와 테스트 세트로 분할\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# MinMaxScaler를 사용하여 입력 특성 스케일 조정\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# LSTM에 맞게 입력 데이터 형태 변환\n",
+    "X_train_reshaped = X_train_scaled.reshape((X_train_scaled.shape[0], 1, X_train_scaled.shape[1]))\n",
+    "X_test_reshaped = X_test_scaled.reshape((X_test_scaled.shape[0], 1, X_test_scaled.shape[1]))\n",
+    "\n",
+    "# LSTM 모델 생성\n",
+    "model_LSTRM = Sequential()\n",
+    "model_LSTRM.add(LSTM(64, input_shape=(X_train_reshaped.shape[1], X_train_reshaped.shape[2])))\n",
+    "model_LSTRM.add(Dense(4))  # 출력층, 4개의 뉴런 (latitude, longitude, sog, cog)\n",
+    "\n",
+    "# 모델 컴파일\n",
+    "model_LSTRM.compile(loss='mse', optimizer='adam')\n",
+    "\n",
+    "# 조기 종료를 위한 EarlyStopping 정의\n",
+    "early_stopping = EarlyStopping(patience=10, restore_best_weights=True)\n",
+    "\n",
+    "# LSTM 모델 훈련\n",
+    "history = model_LSTRM.fit(X_train_reshaped, y_train, epochs=100, batch_size=32, validation_data=(X_test_reshaped, y_test), callbacks=[early_stopping])\n",
+    "\n",
+    "# LSTM 모델을 사용하여 예측 수행\n",
+    "y_pred = model_LSTRM.predict(X_test_reshaped)\n",
+    "\n",
+    "# Convert predictions to a list\n",
+    "y_pred_list = y_pred.tolist()\n",
+    "\n",
+    "# 평균 제곱 오차 계산\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "\n",
+    "# y_test(실제 값)와 y_pred(예측 값) 사이의 R-제곱 값을 계산\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(\"R-squared:\", r2)\n",
+    "\n",
+    "\n",
+    "# Create the response JSON\n",
+    "response = {\n",
+    "    \"latitude\": y_pred_list[0][0],\n",
+    "    \"longitude\": y_pred_list[0][1],\n",
+    "    \"predicted_cog\": y_pred_list[0][2],\n",
+    "    \"predicted_sog\": y_pred_list[0][3]\n",
+    "    \n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# 모델 저장\n",
+    "with open('linear_regression_model_Lstm.pkl_0623', 'wb') as file:\n",
+    "    pickle.dump(model_LSTRM, file)\n",
+    "    \n",
+    "\n",
+    "# 모델을 불러오기 위해 pickle 파일을 엽니다.\n",
+    "model = pickle.load(open('linear_regression_model_Lstm.pkl_0623', 'rb'))\n",
+    "\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "# Save the scaler object\n",
+    "with open('scaler.pkl_0623', 'wb') as file:\n",
+    "    pickle.dump(scaler, file)\n",
+    "\n",
+    "# Load the scaler object\n",
+    "loaded_scaler = pickle.load(open('scaler.pkl_0623', 'rb'))"
+   ]
   }
  ],
  "metadata": {
